# dataraum-eval

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Makefile  programming-as-theory-building.md  pyproject.toml  showcase_harness_architecture.md
.claude/: settings.json
.claude/hooks/: end-of-turn-check.sh
.claude/skills/accept/: SKILL.md
.claude/skills/deliver/: SKILL.md
.claude/skills/investigate/: SKILL.md
agents/: critic.md  fixer.md
calibration/: clean_baseline.yaml  conftest.py  fix_specs.py  runner.py  test_detector_precision.py  test_detector_recall.py  test_fix_calibration.py  test_ground_truth.py  test_report.py
calibration/reports/: zone1-detection-v1_20260313_113840.yaml  zone1-detection-v1_20260313_115323.yaml
calibration/tools/: conftest.py  test_adhoc_teach_loop.py  test_cli_smoke.py  test_error_ux.py  test_format_matrix.py  test_session_lifecycle.py  test_tool_chain.py
deliverables/: annual_summary.yaml
scripts/: test-zone2-cli.sh
spec/: 00-quality-zones.md  01-zone-1-foundation.md  02-zone-2-enrichment.md  03-zone-3-interpretation.md  04-business-pattern-filter.md  05-entropy-measurement-design.md  bug-slicing-view-column-persistence.md  dataraum_showcase_playbooks_v2.md
strategies/: baseline.yaml  clean.yaml  detection-typing-v1.yaml  detection-v1.yaml  zone1-detection-v1.yaml  zone2-detection-v1.yaml  zone3-detection-v1.yaml
