[project]
name = "dataraum-eval"
version = "0.1.0"
description = "Calibration and evaluation harness for DataRaum entropy detectors"
requires-python = ">=3.14"
dependencies = ["dataraum-testdata", "dataraum"]

[tool.uv.sources]
dataraum-testdata = { path = "vendor/dataraum-testdata", editable = true }
dataraum = { path = "vendor/dataraum-context", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["calibration"]
addopts = "-v --tb=short"
markers = [
    "llm: tests that call an LLM (deselect with -m 'not llm')",
    "slow: slow tests that run a full pipeline (deselect with -m 'not slow')",
]

[tool.hatch.build.targets.wheel]
packages = ["calibration"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["calibration"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "dataraum.*",
    "testdata.*",
    "yaml.*",
    "dotenv.*",
]
ignore_missing_imports = true
